apps/static-app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: static-app
  labels:
    istio-injection: enabled
