apps/static-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-app-backend
  namespace: static-app
spec:
  selector:
    app: static-app-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
