apps/static-app/k8s/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: static-app-vs
  namespace: static-app
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/acme-corp-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: static-app-backend.static-app.svc.cluster.local
        port:
          number: 80
